# news_website

./: Makefile  pyproject.toml
news/: admin.py  forms.py  models.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_alter_news_options_alter_news_content_and_more.py  0003_category_news_category.py
news/templates/inc/: _nav.html  _sidebar.html
news/templates/news/: add_news.html  base.html  index.html  read_more.html
news/templatetags/: news_tags.py
site_news/: db.sqlite3
site_news/site_news/: asgi.py  settings.py  urls.py  wsgi.py
telegram_news/: apps.py
tests/: test_apps_news.py
